--- a/esgela/views/adminLogin.ejs
+++ b/esgela/views/adminLogin.ejs
@@ -105,23 +105,10 @@
           .menu-icon{
             display: block;
           }
-          .hero .hero_div .name{
-            width: 65%;
-        }
-        .aboutUs{
-            display: flex;
-            flex-direction: column;
-        }
-    .aboutUs .informationText{
-        width: 100%;
-    }.aboutUs .informationText h2{
-        color: #212529;
-        font-size: 2.1rem;
-    }
-    .aboutUs .informationImage{
-        width: 100%;
-    }
-        }
+          main{
+            padding-left: 1.2rem;
+          }
+          }
     </style>
 </head>
 <body>
