--- a/esgela/views/index.ejs
+++ b/esgela/views/index.ejs
@@ -233,6 +233,9 @@
           .menu-icon{
             display: block;
           }
+          main{
+            padding-left: 0px;
+          }
           
           .hero .hero_div .name{
             width: 65%;
@@ -253,6 +256,7 @@
         .aboutUs{
             display: flex;
             flex-direction: column;
+            padding-left: 0.2rem;
         }
     .aboutUs .informationText{
         width: 100%;
