--- a/esgela/views/login.ejs
+++ b/esgela/views/login.ejs
@@ -81,9 +81,6 @@
             padding: 5px 10px;
             margin-top: 15px;
         }
-        footer{
-            background-color: black;
-        }
         @media screen and (max-width:960px) {
            
           nav ul {
@@ -105,22 +102,9 @@
           .menu-icon{
             display: block;
           }
-          .hero .hero_div .name{
-            width: 65%;
-        }
-        .aboutUs{
-            display: flex;
-            flex-direction: column;
-        }
-    .aboutUs .informationText{
-        width: 100%;
-    }.aboutUs .informationText h2{
-        color: #212529;
-        font-size: 2.1rem;
-    }
-    .aboutUs .informationImage{
-        width: 100%;
-    }
+          main{
+            padding-left: 1.2rem;
+          }
         }
     </style>
 </head>
