--- a/esgela/views/home.ejs
+++ b/esgela/views/home.ejs
@@ -105,6 +105,9 @@
           .menu-icon{
             display: block;
           }
+          main{
+            padding-left: 1.2rem;
+          }
           .hero .hero_div .name{
             width: 65%;
         }
