--- a/esgela/views/admin.ejs
+++ b/esgela/views/admin.ejs
@@ -55,6 +55,11 @@
         nav ul li a{
             text-decoration: none;
             color: goldenrod;
+            background-color: white;
+            padding: 5px 10px;
+            border-radius: 4px;
+            font-size: 18px;
+            font-weight: 600;
             
         }
         nav ul li a:hover{
@@ -133,17 +138,14 @@
 
         <nav>
            <div class="logo">
-            <a href="/" style="text-decoration: none; color: white;">
+            <a href="#" style="text-decoration: none; color: white;">
                 <span class="logo_e">e</span>Sgela.com
             </a>
         </div>
            <div class="menu-icon">&#9776;</div>
            <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/">Courses</a></li>
-            <li><a href="/">About</a></li>
-            <li><a href="/">Services</a></li>
-            <li><a href="/">Contact</a></li>
+           
+            <li><a href="/">logout</a></li>
            </ul>
         </nav>
         <main>
