--- a/esgela/views/form.html
+++ b/esgela/views/form.html
@@ -143,10 +143,10 @@
            <div class="menu-icon">&#9776;</div>
            <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="#cardID">Courses</a></li>
-            <li><a href="#aboutID">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="/">Courses</a></li>
+            <li><a href="/">About</a></li>
+            <li><a href="/">Services</a></li>
+            <li><a href="/">Contact</a></li>
            </ul>
         </nav>
         <main>
