--- a/esgela/views/admin.ejs
+++ b/esgela/views/admin.ejs
@@ -114,24 +114,27 @@
           }
           .menu-icon{
             display: block;
+        }main{
+            padding:1.2rem 0 6rem 0;
           }
-          .hero .hero_div .name{
-            width: 65%;
-        }
-        .aboutUs{
-            display: flex;
-            flex-direction: column;
-        }
-    .aboutUs .informationText{
-        width: 100%;
-    }.aboutUs .informationText h2{
-        color: #212529;
-        font-size: 2.1rem;
-    }
-    .aboutUs .informationImage{
-        width: 100%;
-    }
-        }
+          th{
+            font-size:13px;
+          }
+          td{
+            font-size: 13px;
+          }
+         }@media screen and (max-width:960px) {
+            main{
+                padding-top: 6rem;
+                padding-left: 0.2rem;
+                padding-right: 0.2rem;
+            }
+            th{
+                font-size: 9px;
+            } td{
+                font-size: 9px;
+            }
+         }
     </style>
 </head>
 <body>
