--- a/esgela/views/adminLogin.ejs
+++ b/esgela/views/adminLogin.ejs
@@ -149,7 +149,8 @@
         </main>
         <footer></footer>
     </div>
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3539893980478212"
+     crossorigin="anonymous"></script>
     <script>
         document.querySelector('.menu-icon').addEventListener('click',() =>{
             document.querySelector('nav ul').classList.toggle('show')
