--- a/esgela/views/home.ejs
+++ b/esgela/views/home.ejs
@@ -163,12 +163,5 @@
     </script>
 </body>
 </html>
-
-
-<!----
-    <% if (name && studentNumber) { %>
-        <h1>Welcome, <%= name %>!</h1>
-        <p>Your student number is <%= studentNumber %>.</p>
-    <% } else { %>
-        <h1>Welcome!</h1>
-    <% } %>-->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3539893980478212"
+     crossorigin="anonymous"></script>
