--- a/esgela/views/form.html
+++ b/esgela/views/form.html
@@ -326,7 +326,8 @@
         
         </main>
     </div>
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3539893980478212"
+    crossorigin="anonymous"></script>
     <script>
         document.querySelector('.menu-icon').addEventListener('click',() =>{
             document.querySelector('nav ul').classList.toggle('show')
@@ -398,6 +399,3 @@
 </body>
 </html>
 
-<!--
-    
--->
