--- a/esgela/views/index.ejs
+++ b/esgela/views/index.ejs
@@ -435,8 +435,8 @@
         <footer>
             <p>Created by Onwabe Zibeke copyright: 2024</p>
         </footer>
-    
-
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3539893980478212"
+     crossorigin="anonymous"></script>
     <script>
         document.querySelector('.menu-icon').addEventListener('click',() =>{
             document.querySelector('nav ul').classList.toggle('show')
