--- a/esgela/views/form.html
+++ b/esgela/views/form.html
@@ -245,6 +245,10 @@
                             <option value="WebDevelopment">Web Development</option>
                             <option value="python">Python for Data Science</option>
                             <option value="pythonMachine">Machine Learning</option>
+                            <option value="Nursing">Nursing</option>
+                            <option value="BussinessManagement">Bussiness Management</option>
+                            <option value="Education">Education</option>
+                            <option value="Engineering">Engineering</option>
                         </select>
                     </div>
                     <div>
