--- a/esgela/views/login.ejs
+++ b/esgela/views/login.ejs
@@ -16,14 +16,14 @@
      <!-- Navigation -->
      <nav class="bg-black text-white shadow-lg z-50">
         <div class="flex items-center justify-between px-4 py-3">
-            <a href="/" class="md:text-3xl  font-bold flex items-center">
-                <span class="bg-yellow-400 text-black px-2 py-1 md:text-2xl rounded-sm mr-2">e</span>
+            <a href="/" class=" md:text-3xl font-bold flex items-center">
+                <span class="bg-yellow-400 text-black px-2 py-1 text-2xl rounded-sm mr-2">e</span>
                 Sgela.com
             </a>
             <!-- Mobile Menu Toggle Button -->
             <div class="lg:hidden">
-                <button class="menu-icon text-white focus:outline-none text-2xl">
-                    <i class="fas fa-bars"></i>
+                <button class="menu-icon text-white focus:outline-none">
+                    <i class="fas fa-bars text-2xl"></i>
                 </button>
             </div>
             <ul class="hidden lg:flex items-center space-x-6">
@@ -56,9 +56,9 @@
             <input type="password" name="password" id="password" required
                 class="w-full px-4 py-2 border border-gray-300 rounded-md mb-4 focus:outline-none focus:border-black">
             <span class="text-red-500 block mb-4"><%=message%></span>
-            <a href="/admin" class="text-gray-700 hover:underline mb-4 mt-4 mr-4" >Admin Login</a>
+            <a href="/admin" class="text-gray-700 hover:underline mb-8 mt-4 mr-4" >Admin Login</a>
             <button type="submit"
-                class="btnSubmit bg-black text-white rounded-md px-4 py-2 hover:bg-gray-800 focus:outline-none focus:bg-gray-800 transition duration-300 ease-in-out">Check</button>
+                class="btnSubmit mb-8 bg-black text-white rounded-md px-4 py-2 hover:bg-gray-800 focus:outline-none focus:bg-gray-800 transition duration-300 ease-in-out">Check</button>
         </form>
     </main>
     <!-- Footer -->
