--- a/esgela/views/form.html
+++ b/esgela/views/form.html
@@ -327,13 +327,10 @@
         </div>
     </footer>
 
-    <!-- JavaScript for menu toggle and form navigation -->
     <script>
-         document.querySelector('.menu-icon').addEventListener('click',() =>{
-            document.querySelector('nav ul').classList.toggle('show')
-        })
-
-        
+        document.querySelector('.menu-icon').addEventListener('click', () => {
+            document.querySelector('.mobile-menu').classList.toggle('hidden');
+        });
         let currentSection = 0;
         showSection(currentSection);
 
