--- a/esgela/views/adminLogin.ejs
+++ b/esgela/views/adminLogin.ejs
@@ -44,7 +44,7 @@
 </nav>
 
     <!-- Main Content -->
-    <main class="md:px-8 py-16 flex flex-col items-center">
+    <main class="px-8 md:py-16 flex flex-col items-center">
         <h2 class="text-3xl font-bold mb-4">Admin Login</h2>
         <p class="text-gray-600 mb-8">Please Login with your Admin Username and Password</p>
         <form action="/admin" method="post" class="text-left w-full max-w-md">
