--- a/esgela/views/login.ejs
+++ b/esgela/views/login.ejs
@@ -46,7 +46,7 @@
 
     <!-- Main Content -->
     <main class="px-8 md:py-16 flex flex-col items-center">
-        <h2 class="text-3xl font-bold mb-4">Check Status</h2>
+        <h2 class="text-3xl font-bold mb-4 mt-4">Check Status</h2>
         <p class="text-gray-600 mb-8">Check with ID number or your Student number and Password</p>
         <form action="/login" method="post" class="text-left w-full max-w-md">
             <label for="identifier" class="block mb-2">ID number or Student number:</label>
