--- a/esgela/views/adminLogin.ejs
+++ b/esgela/views/adminLogin.ejs
@@ -55,9 +55,9 @@
             <input type="password" name="password" id="password" required
                 class="w-full px-4 py-2 border border-gray-300 rounded-md mb-4 focus:outline-none focus:border-black">
             <span class="text-red-500 block mb-4"><%=message%></span>
-            <a href="/login" class="text-gray-700 hover:underline mb-4 mt-4 mr-4" >Check Status</a>
+            <a href="/login" class="text-gray-700 hover:underline mb-8 mt-4 mr-4" >Check Status</a>
             <button type="submit"
-                class="btnSubmit bg-black text-white rounded-md px-4 py-2 hover:bg-gray-800 focus:outline-none focus:bg-gray-800 transition duration-300 ease-in-out">LOGIN</button>
+                class="btnSubmit mb-8 bg-black text-white rounded-md px-4 py-2 hover:bg-gray-800 focus:outline-none focus:bg-gray-800 transition duration-300 ease-in-out">LOGIN</button>
         </form>
     </main>
 
